Fix syntax in composer.json

--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
 		{
 			"name": "Vítor Brandão",
 			"email": "noisebleed@noiselabs.org",
-			"homepage": http://blog.noiselabs.org
+			"homepage": "http://blog.noiselabs.org"
 		}
 	],
 	"require": {
