Use class Filesystem from Symfony\Component\Filesystem instead of Symfony\Component\HttpKernel\Util

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ php:
 
 env:
     - SYMFONY_VERSION=v2.0.9
+    - SYMFONY_VERSION=origin/2.0
     - SYMFONY_VERSION=origin/master
 
 before_script: php vendor/vendors.php
