--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ env:
     - SYMFONY_VERSION=origin/2.0
     - SYMFONY_VERSION=origin/master
 
-before_script: php vendor/vendors.php
+before_script: php bin/vendors.php
 
 script: phpunit
 
