--- a/Tests/autoload.php.dist
+++ b/Tests/autoload.php.dist
@@ -24,7 +24,6 @@
  * @copyright   (C) 2011-2012 Vítor Brandão <noisebleed@noiselabs.org>
  * @license     http://www.gnu.org/licenses/lgpl-3.0-standalone.html LGPL-3
  * @link        http://www.noiselabs.org
- * @since       0.1.0
  */
 
 $vendorDir = __DIR__.'/../vendor';
@@ -36,6 +35,7 @@ $loader = new UniversalClassLoader();
 $loader->registerNamespaces(array(
     'Symfony'   => array($vendorDir.'/symfony/src', $vendorDir.'/bundles'),
     'Monolog'   => $vendorDir.'/monolog/src',
+    'Assetic'   => $vendorDir.'/assetic/src',
 ));
 $loader->registerPrefixes(array(
     'Smarty_'           => $vendorDir.'/smarty/libs',
