--- a/composer.json
+++ b/composer.json
@@ -2,9 +2,8 @@
     "name": "noiselabs/smarty-bundle",
     "type": "symfony-bundle",
     "description": "This Symfony2 bundle provides integration for the Smarty3 template engine.",
-    "keywords": ["smarty", "symfony", "noiselabs", "templating"],
+    "keywords": ["templating", "smarty", "symfony", "noiselabs"],
     "homepage": "https://github.com/noiselabs/SmartyBundle",
-    "version": "0.2.0-DEV",
     "license": "LGPLv3",
     "authors": [
         {
@@ -16,11 +15,19 @@
     "require": {
         "php": ">=5.3.2",
         "symfony/framework-bundle": ">=2.0",
-        "smarty/smarty": ">=v3.1.11",
-
+        "smarty/smarty": ">=v3.1.11"
+    },
+    "suggest": {
+        "symfony/assetic-bundle": ">=2.0"
     },
     "autoload": {
         "psr-0": { "NoiseLabs\\Bundle\\SmartyBundle": "" }
     },
-    "target-dir": "NoiseLabs/Bundle/SmartyBundle"
+    "target-dir": "NoiseLabs/Bundle/SmartyBundle",
+    "minimum-stability": "dev",
+    "extra": {
+        "branch-alias": {
+            "dev-master": "0.2-dev"
+        }
+    }
 }
