[doc] Add a 'make api' entry to generate API using ApiGen

--- a/Resources/doc/Makefile
+++ b/Resources/doc/Makefile
@@ -6,6 +6,7 @@ SPHINXOPTS    =
 SPHINXBUILD   = sphinx-build
 PAPER         =
 BUILDDIR      = _build
+APIBUILD	  = apigen
 
 # Internal variables.
 PAPEROPT_a4     = -D latex_paper_size=a4
@@ -14,7 +15,7 @@ ALLSPHINXOPTS   = -d $(BUILDDIR)/doctrees $(PAPEROPT_$(PAPER)) $(SPHINXOPTS) .
 # the i18n builder cannot share the environment and doctrees with the others
 I18NSPHINXOPTS  = $(PAPEROPT_$(PAPER)) $(SPHINXOPTS) .
 
-.PHONY: help clean html dirhtml singlehtml pickle json htmlhelp qthelp devhelp epub latex latexpdf text man changes linkcheck doctest gettext
+.PHONY: help clean html dirhtml singlehtml pickle json htmlhelp qthelp devhelp epub latex latexpdf text man changes linkcheck doctest gettext api
 
 help:
 	@echo "Please use \`make <target>' where <target> is one of"
@@ -37,6 +38,7 @@ help:
 	@echo "  changes    to make an overview of all changed/added/deprecated items"
 	@echo "  linkcheck  to check all external links for integrity"
 	@echo "  doctest    to run all doctests embedded in the documentation (if enabled)"
+	@echo "  api        to generate API documentation from PHP source code"
 
 clean:
 	-rm -rf $(BUILDDIR)/*
@@ -151,3 +153,6 @@ doctest:
 	$(SPHINXBUILD) -b doctest $(ALLSPHINXOPTS) $(BUILDDIR)/doctest
 	@echo "Testing of doctests in the sources finished, look at the " \
 	      "results in $(BUILDDIR)/doctest/output.txt."
+
+api:
+	$(APIBUILD) --source ../../ --destination $(BUILDDIR)/html/api --exclude "*/vendor/*" --exclude "*/bin/*" --exclude "*/Resources/*" --google-analytics="UA-18238226-7" --deprecated=yes --todo=yes --download=yes --title "SmartyBundle"
