--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
     "require": {
         "php": ">=5.3.3",
         "symfony/framework-bundle": ">=2.0",
-        "smarty/smarty": ">=v3.1.11"
+        "smarty/smarty": "3.1.*@stable"
     },
     "require-dev": {
         "symfony/assetic-bundle": ">=2.0",
