--- a/composer.json
+++ b/composer.json
@@ -22,12 +22,12 @@
     },
     "require": {
         "php": ">=5.3.3",
-        "symfony/framework-bundle": "2.1.*@beta",
+        "symfony/framework-bundle": "2.1.*",
         "smarty/smarty": "3.1.*@stable"
     },
     "require-dev": {
-        "symfony/assetic-bundle": ">=2.0",
-        "mopa/bootstrap-bundle": "dev-master"
+        "symfony/yaml": "2.1.*",
+        "symfony/assetic-bundle": ">=2.0"
     },
     "suggest": {
         "symfony/assetic-bundle": "Assetic support in Smarty templates",
@@ -43,7 +43,7 @@
     "minimum-stability": "dev",
     "extra": {
         "branch-alias": {
-            "dev-master": "1.1-dev"
+            "dev-master": "1.1.x-dev"
         }
     }
 }
