--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
         "smarty/smarty": "3.1.*@stable"
     },
     "require-dev": {
+        "symfony/security": "2.1.*",
         "symfony/yaml": "2.1.*",
         "symfony/assetic-bundle": ">=2.0"
     },
