--- a/.travis.yml
+++ b/.travis.yml
@@ -4,18 +4,26 @@ php:
     - 5.3.3
     - 5.3
     - 5.4
+    - 5.5
+
+matrix:
+  allow_failures:
+    - php: 5.5
 
 env:
-    - SYMFONY_VERSION=v2.1.1
+    - SYMFONY_VERSION=v2.1.7
     - SYMFONY_VERSION=origin/2.1
     - SYMFONY_VERSION=origin/master
 
 before_script:
-    - curl -s http://getcomposer.org/installer | php -- --quiet
-    - php composer.phar install --dev
+    - COMPOSER_ROOT_VERSION=dev-master composer --prefer-source --dev install
+    - pear install pear/PHP_CodeSniffer
+    - phpenv rehash
 
-script: phpunit
+script:
+    - phpcs --standard=PSR1 ./ && phpunit --coverage-text
 
 notifications:
+    irc: "irc.freenode.org#noiselabs"
     email:
         - noisebleed@noiselabs.org
