--- a/.travis.yml
+++ b/.travis.yml
@@ -23,4 +23,4 @@ script: phpunit
 notifications:
     irc: "irc.freenode.org#noiselabs"
     email:
-        - noisebleed@noiselabs.org
+        - vitor@noiselabs.org
