--- a/composer.json
+++ b/composer.json
@@ -22,12 +22,12 @@
     },
     "require": {
         "php": ">=5.3.3",
-        "symfony/framework-bundle": "2.2.*",
+        "symfony/framework-bundle": ">=2.1.0",
         "smarty/smarty": "3.1.*@stable"
     },
     "require-dev": {
-        "symfony/security": "2.2.*",
-        "symfony/yaml": "2.2.*",
+        "symfony/security": ">=2.1.0",
+        "symfony/yaml": ">=2.1.0",
         "symfony/assetic-bundle": ">=2.0"
     },
     "suggest": {
