Update email address

--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     "authors": [
         {
             "name": "Vítor Brandão",
-            "email": "noisebleed@noiselabs.org",
+            "email": "vitor@noiselabs.org",
             "homepage": "http://blog.noiselabs.org"
         },
         {
