--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,15 @@
 language: php
 
 php:
-    - 5.3.3
     - 5.3
     - 5.4
     - 5.5
 
-matrix:
-  allow_failures:
-    - php: 5.5
-
 env:
     - SYMFONY_VERSION=origin/2.1
     - SYMFONY_VERSION=origin/2.2
+    - SYMFONY_VERSION=origin/2.3
+    - SYMFONY_VERSION=origin/2.4
     - SYMFONY_VERSION=origin/master
 
 before_script:
