Fix #40 Invalid format for plugins_dir
Configuration now supports an array of plugin_dirs and the default
behaviour is to add directories without erasing the default plugins_dir
setting.
The default template_dir is also kept, by replacing setTemplateDir()
with addTemplateDir() in SmartyEngine.

--- a/Tests/DependencyInjection/Fixtures/yml/full.yml
+++ b/Tests/DependencyInjection/Fixtures/yml/full.yml
@@ -37,6 +37,8 @@ smarty:
         merge_compiled_includes:
         php_handling:
         plugins_dir:
+            - /tmp/noiselabs-smarty-bundle-test/app/Resources/plugins
+            - /tmp/noiselabs-smarty-bundle-test/app/Resources/smarty/plugins
         smarty_debug_id:
         template_dir:          /tmp/noiselabs-smarty-bundle-test/app/Resources/views
         trusted_dir:
