--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,5 @@
+sudo: false
+
 language: php
 
 php:
@@ -13,13 +15,15 @@ env:
     - SYMFONY_VERSION=origin/master
 
 before_script:
-  - composer --dev install
-  - pip install codecov
+  - travis_retry composer self-update
+  - travis_retry composer install --no-interaction --prefer-dist --dev
+  - pip install requests[security] codecov
 
-script: phpunit
+script:
+- vendor/bin/phpunit --coverage-clover=coverage.xml
 
 after_success:
-  - codecov
+  - bash <(curl -s https://codecov.io/bash)
 
 notifications:
     irc: "irc.freenode.org#noiselabs"
