--- a/.travis.yml
+++ b/.travis.yml
@@ -3,28 +3,47 @@ language: php
 sudo: false
 
 git:
-    depth: 1
+  depth: 1
 
 php:
-    - 5.3
-    - 5.4
-    - 5.5
+  - 5.3
+  - 5.4
+  - 5.5
+  - 5.6
+  - 7.0
+  - hhvm
 
-env:
-    - SYMFONY_VERSION=origin/2.1
-    - SYMFONY_VERSION=origin/2.2
-    - SYMFONY_VERSION=origin/2.3
-    - SYMFONY_VERSION=origin/2.4
-    - SYMFONY_VERSION=origin/master
+matrix:
+  fast_finish: true
+  include:
+    - php: 5.3
+      env: COMPOSER_FLAGS="--prefer-lowest"
+    - php: 5.6
+      env: SYMFONY_VERSION=2.3.*
+    - php: 5.6
+      env: SYMFONY_VERSION=2.7.*
+    - php: 5.6
+      env: SYMFONY_VERSION=2.8.*
+    - php: 5.6
+      env: SYMFONY_VERSION=3.0.*
+  allow_failures:
+    - php: hhvm
+
+cache:
+  directories:
+    - $HOME/.composer/cache
 
 before_script:
   - travis_retry composer self-update
-  - travis_retry composer install --no-interaction --prefer-dist
+  - if [ "$SYMFONY_VERSION" != "" ]; then composer require "symfony/symfony:${SYMFONY_VERSION}" --no-update; fi;
+
+install:
+  - travis_retry composer update --prefer-dist --no-interaction $COMPOSER_FLAGS
 
 script:
-- vendor/bin/phpunit
+  - vendor/bin/phpunit --coverage-text
 
 notifications:
-    irc: "irc.freenode.org#noiselabs"
-    email:
-        - vitor@noiselabs.org
+  irc: "irc.freenode.org#noiselabs"
+  email:
+    - vitor@noiselabs.org
