--- a/composer.json
+++ b/composer.json
@@ -23,14 +23,14 @@
     "require": {
         "php": ">=5.5.0",
         "ext-intl": "*",
-        "symfony/framework-bundle": "~2.8",
-        "symfony/templating": "~2.8",
+        "symfony/framework-bundle": "~2.8|~3.0",
+        "symfony/templating": "~2.8|~3.0",
         "smarty/smarty": "3.1.*"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.0|~5.0",
-        "symfony/security": "~2.8",
-        "symfony/yaml": "~2.8",
+        "symfony/security": "~2.8|~3.0",
+        "symfony/yaml": "~2.8|~3.0",
         "symfony/assetic-bundle": "~2.0",
         "symfony/phpunit-bridge": "^3.0"
     },
