--- a/.travis.yml
+++ b/.travis.yml
@@ -43,6 +43,9 @@ install:
 script:
   - vendor/bin/phpunit --coverage-text
 
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
+
 notifications:
   irc: "irc.freenode.org#noiselabs"
   email:
