--- a/composer.json
+++ b/composer.json
@@ -41,6 +41,9 @@
         "liip/theme-bundle": "Integration of Twitter Bootstrap into Symfony2 (themes)",
         "knplabs/knp-menu-bundle": "Smarty3 integration with KnpMenu (object oriented menus)"
     },
+    "conflict": {
+        "kriswallsmith/assetic": "<1.1.3"
+    },
     "autoload": {
         "psr-0": { "NoiseLabs\\Bundle\\SmartyBundle": "" }
     },
