--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "noiselabs/smarty-bundle",
     "type": "symfony-bundle",
-    "description": "This Symfony2 bundle provides integration for the Smarty3 template engine.",
+    "description": "This Symfony2/3 bundle provides integration for the Smarty3 template engine.",
     "keywords": ["templating", "smarty", "symfony", "noiselabs"],
     "homepage": "http://smartybundle.noiselabs.org",
     "license": "LGPL-3.0",
@@ -22,9 +22,9 @@
     },
     "require": {
         "php": "^5.3.3 || ^7.0",
-        "symfony/framework-bundle": "~2.1",
+        "symfony/framework-bundle": "~2.1|3.0.*",
         "smarty/smarty": "3.1.*",
-        "symfony/templating": "~2.1"
+        "symfony/templating": "~2.1|~3.0"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.0|~5.0",
@@ -45,7 +45,7 @@
     "target-dir": "NoiseLabs/Bundle/SmartyBundle",
     "extra": {
         "branch-alias": {
-            "dev-master": "1.3.x-dev"
+            "dev-master": "2.0.x-dev"
         }
     }
 }
