--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
         {
             "name": "Vítor Brandão",
             "email": "vitor@noiselabs.org",
-            "homepage": "http://noiselabs.org"
+            "homepage": "https://noiselabs.io"
         },
         {
             "name": "Community contributions",
