--- a/composer.json
+++ b/composer.json
@@ -23,8 +23,8 @@
     "require": {
         "php": ">=5.5.0",
         "ext-intl": "*",
-        "symfony/framework-bundle": "~2.8|~3.0",
-        "symfony/templating": "~2.8|~3.0",
+        "symfony/framework-bundle": "~2.8|~3.0|~4.0",
+        "symfony/templating": "~2.8|~3.0|~4.0",
         "smarty/smarty": "3.1.*"
     },
     "require-dev": {
