--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
         "ext-intl": "*",
         "symfony/framework-bundle": "~2.8|~3.0|~4.0",
         "symfony/templating": "~2.8|~3.0|~4.0",
+        "symfony/form": "~2.8|~3.0|~4.0",
         "smarty/smarty": "3.1.*"
     },
     "require-dev": {
