--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,7 @@
     "require": {
         "php": ">=5.5.9",
         "ext-intl": "*",
+        "ext-simplexml": "*",
         "symfony/form": "^2.8|^3.0|^4.0",
         "symfony/framework-bundle": "^2.8|^3.0|^4.0",
         "symfony/templating": "^2.8|^3.0|^4.0",
