--- a/.travis.yml
+++ b/.travis.yml
@@ -39,10 +39,10 @@ cache:
 
 before_script:
   - travis_retry composer self-update
-  - if [ "$SYMFONY_VERSION" != "" ]; then composer require "symfony/symfony:${SYMFONY_VERSION}" --no-update; fi;
+  - if [ "$SYMFONY_VERSION" != "" ]; then COMPOSER_MEMORY_LIMIT=-1 composer require "symfony/symfony:${SYMFONY_VERSION}" --no-update; fi;
 
 install:
-  - travis_retry composer update --prefer-dist --no-interaction $COMPOSER_FLAGS
+  - COMPOSER_MEMORY_LIMIT=-1 travis_retry composer update --prefer-dist --no-interaction $COMPOSER_FLAGS
 
 script:
   - composer test
