--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -23,8 +23,11 @@
         <whitelist>
             <directory>./</directory>
             <exclude>
+                <directory>./autoload</directory>
+                <directory>./bin</directory>
                 <directory>./Resources</directory>
                 <directory>./Tests</directory>
+                <directory>./tmp</directory>
                 <directory>./vendor</directory>
             </exclude>
         </whitelist>
