--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -14,8 +14,11 @@
     verbose="true"
 >
     <testsuites>
-        <testsuite name="NoiseLabs SmartyBundle Test Suite">
-            <directory suffix="Test.php">./Tests</directory>
+        <testsuite name="unit">
+            <directory suffix="Test.php">./Tests/Unit</directory>
+        </testsuite>
+        <testsuite name="functional">
+            <directory suffix="Test.php">./Tests/Functional</directory>
         </testsuite>
     </testsuites>
 
