--- a/.travis.yml
+++ b/.travis.yml
@@ -13,17 +13,16 @@ cache:
 matrix:
   fast_finish: true
   include:
-    - php: 5.6
-      env: COMPOSER_FLAGS="--prefer-lowest" SYMFONY_DEPRECATIONS_HELPER=weak
     # Symfony 2 LTS
-    - php: 7.0
+    - php: "7.0"
       env: SYMFONY_LTS='^2'
     # Symfony 3 LTS
-    - php: 7.0
+    - php: "7.0"
       env: SYMFONY_LTS='^3'
     # Symfony 4
-    - php: 7.1
-    - php: 7.2
+    - php: "7.1"
+    - php: "7.2"
+    - php: "7.3"
 
 before_script:
   - travis_retry composer self-update
@@ -34,9 +33,6 @@ install:
 
 script:
   - composer test
-
-after_success:
-  - bash <(curl -s https://codecov.io/bash)
 
 notifications:
   irc: "irc.freenode.org#noiselabs"
