--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "noiselabs/smarty-bundle",
     "type": "symfony-bundle",
-    "description": "This Symfony2 bundle provides integration for the Smarty3 template engine.",
+    "description": "This Symfony bundle provides integration for the Smarty3 template engine.",
     "keywords": ["templating", "smarty", "symfony", "noiselabs"],
     "homepage": "http://smartybundle.noiselabs.org",
     "license": "LGPL-3.0",
@@ -26,7 +26,7 @@
         "sort-packages": true
     },
     "require": {
-        "php": ">=5.5.9",
+        "php": ">=7.0",
         "ext-intl": "*",
         "ext-simplexml": "*",
         "symfony/framework-bundle": "^2.8|^3.0|^4.0",
@@ -34,10 +34,9 @@
         "smarty/smarty": "^3.1.28"
     },
     "require-dev": {
-        "phpunit/phpunit": ">=5.4",
+        "phpunit/phpunit": ">=5.4,<8",
         "symfony/asset": "^2.8|^3.0|^4.0",
         "symfony/expression-language": "^2.8|^3.0|^4.0",
-        "symfony/phpunit-bridge": "~3.0|~4.0",
         "symfony/security": "^2.8|^3.0|^4.0",
         "symfony/security-acl": "^2.8|^3.0|^4.0",
         "symfony/translation": "^2.8|^3.0|^4.0",
@@ -59,6 +58,9 @@
         }
     },
     "scripts": {
-        "test": "vendor/bin/phpunit --coverage-text"
+        "test": "@php vendor/bin/phpunit --verbose",
+        "test-with-coverage": "@test --coverage-text",
+        "test-unit": "@test --testsuite=unit",
+        "test-functional": "@test --testsuite=functional"
     }
 }
