--- a/composer.json
+++ b/composer.json
@@ -36,10 +36,12 @@
     "require-dev": {
         "phpunit/phpunit": ">=5.4,<8",
         "symfony/asset": "^2.8|^3.0|^4.0",
+        "symfony/console": "^2.8|^3.0|^4.0",
         "symfony/expression-language": "^2.8|^3.0|^4.0",
         "symfony/security": "^2.8|^3.0|^4.0",
         "symfony/security-acl": "^2.8|^3.0|^4.0",
         "symfony/translation": "^2.8|^3.0|^4.0",
+        "symfony/twig-bundle": "^2.8|^3.0|^4.0",
         "symfony/yaml": "^2.8|^3.0|^4.0"
     },
     "autoload": {
@@ -58,9 +60,10 @@
         }
     },
     "scripts": {
-        "test": "@php vendor/bin/phpunit --verbose",
+        "test": "php -v && php vendor/bin/phpunit",
         "test-with-coverage": "@test --coverage-text",
         "test-unit": "@test --testsuite=unit",
-        "test-functional": "@test --testsuite=functional"
+        "test-functional": "@test --testsuite=functional",
+        "server:start": "@php -v"
     }
 }
