--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,33 +1,35 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<phpunit xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         backupGlobals="false"
+         backupStaticAttributes="false"
+         bootstrap="vendor/autoload.php"
+         colors="true"
+         columns="max"
+         convertErrorsToExceptions="true"
+         convertNoticesToExceptions="false"
+         convertWarningsToExceptions="false"
+         processIsolation="false"
+         stopOnFailure="false"
+         verbose="true"
+         xsi:noNamespaceSchemaLocation="https://schema.phpunit.de/9.3/phpunit.xsd">
 
-<phpunit
-    backupGlobals="false"
-    backupStaticAttributes="false"
-    bootstrap="vendor/autoload.php"
-    colors="true"
-    columns="max"
-    convertErrorsToExceptions="true"
-    convertNoticesToExceptions="true"
-    convertWarningsToExceptions="true"
-    processIsolation="false"
-    stopOnFailure="false"
-    syntaxCheck="true"
-    verbose="true"
->
+    <php>
+        <ini name="assert.exception" value="1"/>
+        <ini name="date.timezone" value="Europe/London"/>
+        <ini name="error_reporting" value="22519"/>
+        <ini name="intl.default_locale" value="en"/>
+        <ini name="intl.error_level" value="0"/>
+        <ini name="log_errors_max_len" value="0"/>
+        <ini name="memory_limit" value="-1"/>
+        <ini name="xdebug.show_exception_trace" value="0"/>
+        <ini name="zend.assertions" value="1"/>
+
+        <env name="SYMFONY_DEPRECATIONS_HELPER" value="weak"/>
+    </php>
+
     <testsuites>
-        <testsuite name="NoiseLabs SmartyBundle Test Suite">
-            <directory suffix="Test.php">./Tests</directory>
+        <testsuite name="default">
+            <directory>./Tests</directory>
         </testsuite>
     </testsuites>
-
-    <filter>
-        <whitelist>
-            <directory>./</directory>
-            <exclude>
-                <directory>./Resources</directory>
-                <directory>./Tests</directory>
-                <directory>./vendor</directory>
-            </exclude>
-        </whitelist>
-    </filter>
 </phpunit>
