GH-78 Check source code using the PHP Coding Standards Fixer (PHP CS Fixer) tool

--- a/.gitignore
+++ b/.gitignore
@@ -2,16 +2,11 @@
 *.kate-swp
 *.pyc
 .idea
-
-phpunit.xml
-composer.phar
-Resources/doc/phpunit*
-run-me-before-release.sh
-
-vendor
-tmp
-_build
-
-composer.lock
-.idea
 .phpunit.result.cache
+.php-cs-fixer.cache
+composer.lock
+/Resources/doc/_build/
+/Tests/Functional/App/cache
+/Tests/Functional/App/logs
+/tmp
+vendor
