GH-78 Drop Symfony-2 support
GH-78 Make DependencyInjection/Configuration compatible with recent Symfony versions

GH-78 PHP 8 fixes

--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -15,7 +15,7 @@ jobs:
     strategy:
       matrix:
         php: [ '7.2', '8.0' ]
-        symfony: [ '3.4', '4.4', '5.3' ]
+        symfony: [ '3.4', '4.4' ]
       fail-fast: false
 
     steps:
