--- a/composer.json
+++ b/composer.json
@@ -30,18 +30,18 @@
         "ext-intl": "*",
         "ext-simplexml": "*",
         "smarty/smarty": "^3.1.28",
-        "symfony/framework-bundle": "~2.8|~3.0|~4.0",
-        "symfony/templating": "~2.8|~3.0|~4.0"
+        "symfony/framework-bundle": "^3|^4",
+        "symfony/templating": "^3|^4"
     },
     "require-dev": {
         "phpunit/phpunit": "^8|^9",
-        "symfony/asset": "~2.8|~3.0|~4.0",
-        "symfony/expression-language": "~2.8|~3.0",
-        "symfony/phpunit-bridge": "^3.0",
+        "symfony/asset": "^3|^4",
+        "symfony/expression-language": "^3|^4",
+        "symfony/phpunit-bridge": "^3|^4",
         "symfony/security": "^3.4.48|^4",
-        "symfony/security-acl": "~2.8|~3.0",
-        "symfony/translation": "~2.8|~3.0|~4.0",
-        "symfony/yaml": "~2.8|~3.0"
+        "symfony/security-acl": "^3|^4",
+        "symfony/translation": "^3|^4",
+        "symfony/yaml": "^3|^4"
     },
     "autoload": {
         "psr-4": { "NoiseLabs\\Bundle\\SmartyBundle\\": "" }
@@ -53,7 +53,7 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "3.0.x-dev"
+            "dev-master": "4.0.x-dev"
         }
     },
     "scripts": {
