--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,4 +1,4 @@
-name: Docker-Compose
+name: Testing Sandbox
 
 on:
   push:
@@ -6,7 +6,7 @@ on:
 
 jobs:
   build:
-    name: Build Docker images
+    name: Docker Build
     runs-on: ubuntu-latest
 
     strategy:
@@ -18,4 +18,4 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Build ${{ matrix.build_target }}
-        run: make dc-build-${{ matrix.build_target }}
+        run: make build-${{ matrix.build_target }}
