--- a/composer.json
+++ b/composer.json
@@ -29,20 +29,20 @@
         "php": "^7.1|^8",
         "ext-intl": "*",
         "ext-simplexml": "*",
-        "smarty/smarty": "^3.1.28",
-        "symfony/framework-bundle": "^3|^4",
-        "symfony/templating": "^3|^4"
+        "smarty/smarty": "^3.1.40",
+        "symfony/framework-bundle": "^4|^5",
+        "symfony/templating": "^4|^5"
     },
     "require-dev": {
-        "phpunit/phpunit": "^8|^9",
-        "symfony/asset": "^3|^4",
-        "symfony/console": "^3|^4",
-        "symfony/expression-language": "^3|^4",
-        "symfony/phpunit-bridge": "^3|^4",
-        "symfony/security": "^3.4.48|^4",
-        "symfony/security-acl": "^3|^4",
-        "symfony/translation": "^3|^4",
-        "symfony/yaml": "^3|^4"
+        "phpunit/phpunit": "*",
+        "symfony/asset": "^4|^5",
+        "symfony/console": "^4|^5",
+        "symfony/expression-language": "^4|^5",
+        "symfony/phpunit-bridge": "^4|^5",
+        "symfony/security": "^3.4.48|^4|^5",
+        "symfony/security-acl": "^3|^4|^5",
+        "symfony/translation": "^4|^5",
+        "symfony/yaml": "^4|^5"
     },
     "autoload": {
         "psr-4": {
@@ -60,7 +60,7 @@
         }
     },
     "scripts": {
-        "test": "php -dxdebug.mode=coverage vendor/bin/phpunit",
+        "test": "XDEBUG_MODE=coverage phpunit",
         "test-with-coverage": "@test --coverage-text",
         "test-unit": "@test --testsuite=unit",
         "test-functional": "@test --testsuite=functional",
