--- a/tests/Sandbox/App/config/routing.yaml
+++ b/tests/Sandbox/App/config/routing.yaml
@@ -4,3 +4,6 @@ hello:
 routing:
     path: /routing
     controller: NoiseLabs\Bundle\SmartyBundle\Tests\Sandbox\App\Controller\RoutingController::index
+translation:
+    path: /translation
+    controller: NoiseLabs\Bundle\SmartyBundle\Tests\Sandbox\App\Controller\TranslationController::index
